# Attention-From-Scratch

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  RECOMMENDATIONS.md  codex_rules.yaml  docker-compose.yml  err  pyproject.toml  requirements.in  requirements.txt
analysis/: __init__.py  analyse_architecture.py  benchmark_runtime.py  compare_engines.py  dump_state_dict_summary.py  get_tensor_shapes_form_safetensors.py  gpu_profile_report.py  layer_table.csv  plot_throughput.ipynb  state_dict_summary.csv  verify_tensor_extraction.py
config/: config.yaml
configs/: default.yaml  vast.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  ENVIRONMENT.md  ENVIRONMENT_AND_FLOWS.md  ENVIRONMENT_SETUP.md  OLMO2_BASELINE.md  PROJECT_PLAN.md  SETUP.md  TROUBLESHOOTING.md  WORKFLOW.md
include/attention/: core.hpp
inference/: stress_inference.py
inference/From_Scratch/: README.md  run_custom_inference.py  run_placeholder.py
inference/Olmo_2/: README.md  check_gpu.py  check_gpu_profiler.py  run_from_snapshot.py  run_olmo2_inference.py  run_snapshot_sanity.py  test_inference.py
legacy/: README_MOVED.md  download_olmo2_assets.py
llm_raw/: README.md
llm_raw/olmo_2/metadata/: model.safetensors.index.json  tensor_inventory.csv
llm_raw/olmo_2/test/: README.md  run_olmo2_inference.py
llm_setup/: README.md
llm_setup/analysis/: analyse_architecture.py  extract_tensor_by_offset.py  get_tensor_shapes_form_safetensors.py  test_analysis.py  verify_tensor_extraction.py
python_bindings/: module.cpp
reports_data_analysis/: stress_results_analysis.ipynb
scripts/: analyse_architecture.py  bootstrap_vast_ai.sh  check_olmo_gpu.py  check_olmo_gpu_profiler.py  convert_olmo2.py  download_olmo2_assets.py  download_weights.py  fetch_olmo2_repo.sh  layer_summary.csv  report_env.sh  run_from_snapshot.py  run_olmo2_inference.py  run_open_inference.py  run_snapshot_sanity.py  setup_olmo2_env.sh  setup_olmo2_repo.sh  state_dict_summary.csv  test_inference.py
scripts/inference/: test_inference.py
scripts/setup/: check_gpu.py  create_venv.sh  export_model_env.py  fetch_olmo2_repo.sh  install_all.sh  install_deps.sh  run_env_report.py  verify_config.py  verify_install.py
setup/: README.md  bare_metal_setup.sh  bootstrap_host.sh
setup/requirements/: requirements.txt
setup_env/: check_gpu.py  create_venv.sh  export_model_env.py  install_all.sh  install_deps.sh  run_env_report.py  setup_env.sh  verify_config.py
src/: core.cpp  model_storage.py
src/custom_engine/: __init__.py  core.py
src/custom_engine/utils/: bf16.h  cuda_utils.cuh  dtype.h  logging.h  model_paths.cpp  model_paths.hpp  safetensors.cpp  safetensors.hpp
src/custom_engine/v1/: kernels.cu  kernels.cuh  prefill_decode.cu  prefill_decode.hpp  tokenizer_adapter.cpp  tokenizer_adapter.h  weight_loader.cpp  weight_loader.hpp
src/inference/: __init__.py  engine.py
src/model_env/: __init__.py
src/project_config/: __init__.py
tests/: CMakeLists.txt  test_layer0_smoke.cpp  test_loader.cpp  test_placeholder.cpp  test_prefill_decode.cpp
weights/allenai/OLMo-2-1124-13B/: README.md  config.json  model.safetensors.index.json
weights/allenai/OLMo-2-1124-13B-Instruct/: config.json  generation_config.json  tokenizer_config.json
weights/llama3/: README.md
weights/olmo2/metadata/: README.md  config.json
