 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "attention-from-scratch"
 version = "0.1.0"
 description = "Inference and analysis tooling for the Attention-From-Scratch project."
 requires-python = ">=3.10"
 readme = "README.md"
 authors = [{ name = Adin Mauer" }]
 dependencies = [
   "numpy==1.26.4",
   "pybind11==2.12.0",
   "rich==13.7.1",
   "tqdm==4.66.4",
   "typer==0.12.3",
 ]

 [project.optional-dependencies]
 olmo = [
   "accelerate==0.31.0",
   "bitsandbytes==0.43.1",
   "huggingface-hub==0.24.5",
   "safetensors==0.4.3",
   "sentencepiece==0.1.99",
   "torch==2.3.1",
   "torchaudio==2.3.1",
   "torchvision==0.18.1",
   "transformers==4.41.1",
 ]
 dev = [
   "pytest==8.2.2",
   "ruff==0.4.9",
 ]

 [tool.setuptools]
 packages = ["src"]

 [tool.setuptools.package-dir]
 "" = "src"

 [tool.pytest.ini_options]
 pythonpath = ["."]
 minversion = "8.0"
 addopts = "-ra"

