 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"

[project]
name = "attention-from-scratch"
version = "0.1.0"
description = "Inference and analysis tooling for the Attention-From-Scratch project."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Attention From Scratch Contributors" }]
dependencies = [
  "numpy==1.26.4",
  "pybind11==2.12.0",
  "rich==13.7.1",
  "tqdm==4.66.4",
  "typer==0.12.3",
]

 [project.optional-dependencies]
olmo = [
  "accelerate==0.31.0",
  "ai2-olmo-core==2.3.0",
  "antlr4-python3-runtime==4.9.3",
  "bettermap==1.3.1",
  "boto3==1.40.63",
  "bitsandbytes==0.43.1",
  "cached_path==1.8.0",
  "datasets==2.19.1",
  "google-cloud-storage==2.19.0",
  "huggingface-hub==0.24.5",
  "importlib-resources==6.5.2",
  "omegaconf==2.3.0",
  "safetensors==0.4.3",
  "sentencepiece==0.1.99",
  "tokenizers==0.21.0",
  "torch==2.9.0",
  "torchaudio==2.9.0",
  "torchvision==0.24.0",
  "transformers==4.48.2",
]
 dev = [
   "pytest==8.2.2",
   "ruff==0.4.9",
 ]

[tool.setuptools]
packages = ["custom_engine", "inference", "analysis", "project_config"]

 [tool.setuptools.package-dir]
custom_engine = "src/custom_engine"
inference = "src/inference"
analysis = "analysis"
project_config = "src/project_config"

 [tool.pytest.ini_options]
 pythonpath = ["."]
 minversion = "8.0"
 addopts = "-ra"
